// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingState should render an ActivityIndicator 1`] = `
<BlueBaseApp>
  <BlueBaseRoot>
    <ThemeProvider>
      <SystemApp>
        <ThemedComponent>
          <SystemApp>
            <LoadingState>
              <ComponentState
                image={<ActivityIndicator />}
              >
                <ThemedComponent
                  image={<ActivityIndicator />}
                >
                  <ComponentState
                    image={<ActivityIndicator />}
                    styles={
                      Object {
                        "actionRoot": Object {
                          "marginTop": 8,
                        },
                        "description": Object {
                          "marginBottom": 8,
                          "textAlign": "center",
                        },
                        "image": Object {
                          "height": 250,
                          "width": 250,
                        },
                        "imageRoot": Object {
                          "marginBottom": 16,
                        },
                        "root": Object {
                          "alignItems": "center",
                          "flex": 1,
                          "justifyContent": "center",
                        },
                        "title": Object {
                          "marginBottom": 8,
                          "textAlign": "center",
                        },
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "flex": 1,
                          "justifyContent": "center",
                        }
                      }
                    >
                      <ThemedComponent
                        style={
                          Object {
                            "alignItems": "center",
                            "flex": 1,
                            "justifyContent": "center",
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "alignItems": "center",
                              "flex": 1,
                              "justifyContent": "center",
                            }
                          }
                        >
                          <View
                            style={
                              Object {
                                "alignItems": "center",
                                "flex": 1,
                                "justifyContent": "center",
                              }
                            }
                          >
                            <View
                              style={
                                Object {
                                  "marginBottom": 16,
                                }
                              }
                            >
                              <ThemedComponent
                                style={
                                  Object {
                                    "marginBottom": 16,
                                  }
                                }
                              >
                                <View
                                  style={
                                    Object {
                                      "marginBottom": 16,
                                    }
                                  }
                                >
                                  <View
                                    style={
                                      Object {
                                        "marginBottom": 16,
                                      }
                                    }
                                  >
                                    <ActivityIndicator>
                                      <ThemedComponent>
                                        <ActivityIndicator
                                          animating={true}
                                          color="#999999"
                                          hidesWhenStopped={true}
                                          size="small"
                                        >
                                          <ActivityIndicator
                                            animating={true}
                                            color="#999999"
                                            hidesWhenStopped={true}
                                            size="small"
                                          />
                                        </ActivityIndicator>
                                      </ThemedComponent>
                                    </ActivityIndicator>
                                  </View>
                                </View>
                              </ThemedComponent>
                            </View>
                          </View>
                        </View>
                      </ThemedComponent>
                    </View>
                  </ComponentState>
                </ThemedComponent>
              </ComponentState>
            </LoadingState>
          </SystemApp>
        </ThemedComponent>
      </SystemApp>
    </ThemeProvider>
  </BlueBaseRoot>
</BlueBaseApp>
`;

exports[`LoadingState should render timeout message & retry button 1`] = `
<BlueBaseApp>
  <BlueBaseRoot>
    <ThemeProvider>
      <SystemApp>
        <ThemedComponent>
          <SystemApp>
            <LoadingState
              retry={[MockFunction]}
              timedOut={true}
            >
              <ComponentState
                actionOnPress={[MockFunction]}
                actionTitle="Retry"
                description="This is taking longer than usual"
                image={<ActivityIndicator />}
              >
                <ThemedComponent
                  actionOnPress={[MockFunction]}
                  actionTitle="Retry"
                  description="This is taking longer than usual"
                  image={<ActivityIndicator />}
                >
                  <ComponentState
                    actionOnPress={[MockFunction]}
                    actionTitle="Retry"
                    description="This is taking longer than usual"
                    image={<ActivityIndicator />}
                    styles={
                      Object {
                        "actionRoot": Object {
                          "marginTop": 8,
                        },
                        "description": Object {
                          "marginBottom": 8,
                          "textAlign": "center",
                        },
                        "image": Object {
                          "height": 250,
                          "width": 250,
                        },
                        "imageRoot": Object {
                          "marginBottom": 16,
                        },
                        "root": Object {
                          "alignItems": "center",
                          "flex": 1,
                          "justifyContent": "center",
                        },
                        "title": Object {
                          "marginBottom": 8,
                          "textAlign": "center",
                        },
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "flex": 1,
                          "justifyContent": "center",
                        }
                      }
                    >
                      <ThemedComponent
                        style={
                          Object {
                            "alignItems": "center",
                            "flex": 1,
                            "justifyContent": "center",
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "alignItems": "center",
                              "flex": 1,
                              "justifyContent": "center",
                            }
                          }
                        >
                          <View
                            style={
                              Object {
                                "alignItems": "center",
                                "flex": 1,
                                "justifyContent": "center",
                              }
                            }
                          >
                            <View
                              style={
                                Object {
                                  "marginBottom": 16,
                                }
                              }
                            >
                              <ThemedComponent
                                style={
                                  Object {
                                    "marginBottom": 16,
                                  }
                                }
                              >
                                <View
                                  style={
                                    Object {
                                      "marginBottom": 16,
                                    }
                                  }
                                >
                                  <View
                                    style={
                                      Object {
                                        "marginBottom": 16,
                                      }
                                    }
                                  >
                                    <ActivityIndicator>
                                      <ThemedComponent>
                                        <ActivityIndicator
                                          animating={true}
                                          color="#999999"
                                          hidesWhenStopped={true}
                                          size="small"
                                        >
                                          <ActivityIndicator
                                            animating={true}
                                            color="#999999"
                                            hidesWhenStopped={true}
                                            size="small"
                                          />
                                        </ActivityIndicator>
                                      </ThemedComponent>
                                    </ActivityIndicator>
                                  </View>
                                </View>
                              </ThemedComponent>
                            </View>
                            <Body2
                              style={
                                Object {
                                  "marginBottom": 8,
                                  "textAlign": "center",
                                }
                              }
                            >
                              <ThemedComponent
                                style={
                                  Object {
                                    "marginBottom": 8,
                                    "textAlign": "center",
                                  }
                                }
                              >
                                <Component
                                  style={
                                    Object {
                                      "marginBottom": 8,
                                      "textAlign": "center",
                                    }
                                  }
                                  styles={
                                    Object {
                                      "root": Object {
                                        "color": "rgba(0, 0, 0, 0.87)",
                                        "fontFamily": "Roboto",
                                        "fontSize": 14,
                                        "fontWeight": "400",
                                      },
                                    }
                                  }
                                >
                                  <Text
                                    style={
                                      Array [
                                        Object {
                                          "color": "rgba(0, 0, 0, 0.87)",
                                          "fontFamily": "Roboto",
                                          "fontSize": 14,
                                          "fontWeight": "400",
                                        },
                                        Object {
                                          "marginBottom": 8,
                                          "textAlign": "center",
                                        },
                                      ]
                                    }
                                  >
                                    <Text
                                      style={
                                        Array [
                                          Object {
                                            "color": "rgba(0, 0, 0, 0.87)",
                                            "fontFamily": "Roboto",
                                            "fontSize": 14,
                                            "fontWeight": "400",
                                          },
                                          Object {
                                            "marginBottom": 8,
                                            "textAlign": "center",
                                          },
                                        ]
                                      }
                                    >
                                      This is taking longer than usual
                                    </Text>
                                  </Text>
                                </Component>
                              </ThemedComponent>
                            </Body2>
                            <View
                              style={
                                Object {
                                  "marginTop": 8,
                                }
                              }
                            >
                              <ThemedComponent
                                style={
                                  Object {
                                    "marginTop": 8,
                                  }
                                }
                              >
                                <View
                                  style={
                                    Object {
                                      "marginTop": 8,
                                    }
                                  }
                                >
                                  <View
                                    style={
                                      Object {
                                        "marginTop": 8,
                                      }
                                    }
                                  >
                                    <Button
                                      color="primary"
                                      onPress={[MockFunction]}
                                    >
                                      <ThemedComponent
                                        color="primary"
                                        onPress={[MockFunction]}
                                      >
                                        <Button
                                          color="primary"
                                          onPress={[MockFunction]}
                                          styles={
                                            Object {
                                              "default": Object {
                                                "backgroundColor": "#fafafa",
                                              },
                                              "defaultText": Object {},
                                              "fullWidth": Object {
                                                "alignSelf": "stretch",
                                              },
                                              "link": Object {},
                                              "linkText": Object {},
                                              "primary": Object {
                                                "backgroundColor": "#3f51b5",
                                              },
                                              "primaryText": Object {
                                                "color": "#fff",
                                              },
                                              "root": Object {
                                                "alignSelf": "flex-start",
                                                "borderRadius": 4,
                                                "paddingBottom": 8,
                                                "paddingLeft": 16,
                                                "paddingRight": 16,
                                                "paddingTop": 8,
                                              },
                                              "secondary": Object {
                                                "backgroundColor": "#f50057",
                                              },
                                              "secondaryText": Object {
                                                "color": "#fff",
                                              },
                                              "text": Object {
                                                "color": "rgba(0, 0, 0, 0.87)",
                                                "fontFamily": "Roboto",
                                                "fontSize": 14,
                                                "fontWeight": "500",
                                                "textAlign": "center",
                                                "textTransform": "uppercase",
                                              },
                                            }
                                          }
                                        >
                                          <TouchableOpacity
                                            accessibilityRole="button"
                                            activeOpacity={0.2}
                                            onPress={[MockFunction]}
                                          >
                                            <AnimatedComponent
                                              accessibilityRole="button"
                                              accessible={true}
                                              isTVSelectable={true}
                                              onResponderGrant={[Function]}
                                              onResponderMove={[Function]}
                                              onResponderRelease={[Function]}
                                              onResponderTerminate={[Function]}
                                              onResponderTerminationRequest={[Function]}
                                              onStartShouldSetResponder={[Function]}
                                              style={
                                                Array [
                                                  undefined,
                                                  Object {
                                                    "opacity": 1,
                                                  },
                                                ]
                                              }
                                            >
                                              <View
                                                accessibilityRole="button"
                                                accessible={true}
                                                isTVSelectable={true}
                                                onResponderGrant={[Function]}
                                                onResponderMove={[Function]}
                                                onResponderRelease={[Function]}
                                                onResponderTerminate={[Function]}
                                                onResponderTerminationRequest={[Function]}
                                                onStartShouldSetResponder={[Function]}
                                                style={
                                                  Object {
                                                    "opacity": 1,
                                                  }
                                                }
                                              >
                                                <View
                                                  accessibilityRole="button"
                                                  accessible={true}
                                                  isTVSelectable={true}
                                                  onResponderGrant={[Function]}
                                                  onResponderMove={[Function]}
                                                  onResponderRelease={[Function]}
                                                  onResponderTerminate={[Function]}
                                                  onResponderTerminationRequest={[Function]}
                                                  onStartShouldSetResponder={[Function]}
                                                  style={
                                                    Object {
                                                      "opacity": 1,
                                                    }
                                                  }
                                                >
                                                  <View
                                                    style={
                                                      Array [
                                                        Object {
                                                          "alignSelf": "flex-start",
                                                          "borderRadius": 4,
                                                          "paddingBottom": 8,
                                                          "paddingLeft": 16,
                                                          "paddingRight": 16,
                                                          "paddingTop": 8,
                                                        },
                                                        Object {
                                                          "backgroundColor": "#3f51b5",
                                                        },
                                                      ]
                                                    }
                                                  >
                                                    <View
                                                      style={
                                                        Array [
                                                          Object {
                                                            "alignSelf": "flex-start",
                                                            "borderRadius": 4,
                                                            "paddingBottom": 8,
                                                            "paddingLeft": 16,
                                                            "paddingRight": 16,
                                                            "paddingTop": 8,
                                                          },
                                                          Object {
                                                            "backgroundColor": "#3f51b5",
                                                          },
                                                        ]
                                                      }
                                                    >
                                                      <Text
                                                        style={
                                                          Array [
                                                            Object {
                                                              "color": "rgba(0, 0, 0, 0.87)",
                                                              "fontFamily": "Roboto",
                                                              "fontSize": 14,
                                                              "fontWeight": "500",
                                                              "textAlign": "center",
                                                              "textTransform": "uppercase",
                                                            },
                                                            Object {
                                                              "color": "#fff",
                                                            },
                                                          ]
                                                        }
                                                      >
                                                        <Text
                                                          style={
                                                            Array [
                                                              Object {
                                                                "color": "rgba(0, 0, 0, 0.87)",
                                                                "fontFamily": "Roboto",
                                                                "fontSize": 14,
                                                                "fontWeight": "500",
                                                                "textAlign": "center",
                                                                "textTransform": "uppercase",
                                                              },
                                                              Object {
                                                                "color": "#fff",
                                                              },
                                                            ]
                                                          }
                                                        >
                                                          Retry
                                                        </Text>
                                                      </Text>
                                                    </View>
                                                  </View>
                                                </View>
                                              </View>
                                            </AnimatedComponent>
                                          </TouchableOpacity>
                                        </Button>
                                      </ThemedComponent>
                                    </Button>
                                  </View>
                                </View>
                              </ThemedComponent>
                            </View>
                          </View>
                        </View>
                      </ThemedComponent>
                    </View>
                  </ComponentState>
                </ThemedComponent>
              </ComponentState>
            </LoadingState>
          </SystemApp>
        </ThemedComponent>
      </SystemApp>
    </ThemeProvider>
  </BlueBaseRoot>
</BlueBaseApp>
`;

exports[`LoadingState should render timeout message 1`] = `
<BlueBaseApp>
  <BlueBaseRoot>
    <ThemeProvider>
      <SystemApp>
        <ThemedComponent>
          <SystemApp>
            <LoadingState
              timedOut={true}
            >
              <ComponentState
                description="This is taking longer than usual"
                image={<ActivityIndicator />}
              >
                <ThemedComponent
                  description="This is taking longer than usual"
                  image={<ActivityIndicator />}
                >
                  <ComponentState
                    description="This is taking longer than usual"
                    image={<ActivityIndicator />}
                    styles={
                      Object {
                        "actionRoot": Object {
                          "marginTop": 8,
                        },
                        "description": Object {
                          "marginBottom": 8,
                          "textAlign": "center",
                        },
                        "image": Object {
                          "height": 250,
                          "width": 250,
                        },
                        "imageRoot": Object {
                          "marginBottom": 16,
                        },
                        "root": Object {
                          "alignItems": "center",
                          "flex": 1,
                          "justifyContent": "center",
                        },
                        "title": Object {
                          "marginBottom": 8,
                          "textAlign": "center",
                        },
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "flex": 1,
                          "justifyContent": "center",
                        }
                      }
                    >
                      <ThemedComponent
                        style={
                          Object {
                            "alignItems": "center",
                            "flex": 1,
                            "justifyContent": "center",
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "alignItems": "center",
                              "flex": 1,
                              "justifyContent": "center",
                            }
                          }
                        >
                          <View
                            style={
                              Object {
                                "alignItems": "center",
                                "flex": 1,
                                "justifyContent": "center",
                              }
                            }
                          >
                            <View
                              style={
                                Object {
                                  "marginBottom": 16,
                                }
                              }
                            >
                              <ThemedComponent
                                style={
                                  Object {
                                    "marginBottom": 16,
                                  }
                                }
                              >
                                <View
                                  style={
                                    Object {
                                      "marginBottom": 16,
                                    }
                                  }
                                >
                                  <View
                                    style={
                                      Object {
                                        "marginBottom": 16,
                                      }
                                    }
                                  >
                                    <ActivityIndicator>
                                      <ThemedComponent>
                                        <ActivityIndicator
                                          animating={true}
                                          color="#999999"
                                          hidesWhenStopped={true}
                                          size="small"
                                        >
                                          <ActivityIndicator
                                            animating={true}
                                            color="#999999"
                                            hidesWhenStopped={true}
                                            size="small"
                                          />
                                        </ActivityIndicator>
                                      </ThemedComponent>
                                    </ActivityIndicator>
                                  </View>
                                </View>
                              </ThemedComponent>
                            </View>
                            <Body2
                              style={
                                Object {
                                  "marginBottom": 8,
                                  "textAlign": "center",
                                }
                              }
                            >
                              <ThemedComponent
                                style={
                                  Object {
                                    "marginBottom": 8,
                                    "textAlign": "center",
                                  }
                                }
                              >
                                <Component
                                  style={
                                    Object {
                                      "marginBottom": 8,
                                      "textAlign": "center",
                                    }
                                  }
                                  styles={
                                    Object {
                                      "root": Object {
                                        "color": "rgba(0, 0, 0, 0.87)",
                                        "fontFamily": "Roboto",
                                        "fontSize": 14,
                                        "fontWeight": "400",
                                      },
                                    }
                                  }
                                >
                                  <Text
                                    style={
                                      Array [
                                        Object {
                                          "color": "rgba(0, 0, 0, 0.87)",
                                          "fontFamily": "Roboto",
                                          "fontSize": 14,
                                          "fontWeight": "400",
                                        },
                                        Object {
                                          "marginBottom": 8,
                                          "textAlign": "center",
                                        },
                                      ]
                                    }
                                  >
                                    <Text
                                      style={
                                        Array [
                                          Object {
                                            "color": "rgba(0, 0, 0, 0.87)",
                                            "fontFamily": "Roboto",
                                            "fontSize": 14,
                                            "fontWeight": "400",
                                          },
                                          Object {
                                            "marginBottom": 8,
                                            "textAlign": "center",
                                          },
                                        ]
                                      }
                                    >
                                      This is taking longer than usual
                                    </Text>
                                  </Text>
                                </Component>
                              </ThemedComponent>
                            </Body2>
                          </View>
                        </View>
                      </ThemedComponent>
                    </View>
                  </ComponentState>
                </ThemedComponent>
              </ComponentState>
            </LoadingState>
          </SystemApp>
        </ThemedComponent>
      </SystemApp>
    </ThemeProvider>
  </BlueBaseRoot>
</BlueBaseApp>
`;
